<resources>
    <string name="app_name">FuelSpot</string>
    <string name="app_version">1.0.0</string>

    <!--Labels-->
    <string name="nomeLabel">Nome</string>
    <string name="emailLabel">Email</string>
    <string name="senhaLabel">Senha</string>
    <string name="addPostoLabel">Adicionar Posto</string>
    <string name="souProprietarioLabel">Sou Proprietário</string>
    <string name="precoErradoLabel">Posto estava com algum preço errado</string>
    <string name="bemAtendidoLabel">Fui bem atendido</string>
    <string name="confirmarSenhaLabel">Confirmar Senha</string>
    <string name="cnpjLabel">CNPJ</string>
    <string name="cepLabel">Cep</string>
    <string name="bairroLabel">Bairro</string>
    <string name="cidadeLabel">Cidade</string>
    <string name="ruaLabel">Rua</string>
    <string name="precoLabel">Preço</string>
    <string name="numeroLabel">Número</string>
    <string name="postoNomeLabel">Nome do Posto</string>


    <!--Texts-->
    <string name="forgotPasswordText">Esqueceu Sua Senha?</string>
    <string name="noAccountText">Caso Não Tenha Uma Conta</string>
    <string name="avaliarPostoText">Avaliar Posto</string>
    <string name="confirmarText">Confirmar</string>
    <string name="cadastroText">Cadastro</string>
    <string name="addPostoText">Cadastro de Posto</string>
    <string name="loginText">Login</string>
    <string name="sairText">Sair</string>
    <string name="editProfileText">Editar Perfil</string>
    <string name="profileText">Perfil</string>
    <string name="checkSpotText">Meus Postos</string>
    <string name="checkReviewsText">Minhas Avaliações</string>
    <string name="gasolinaComumText">Preço Gasolina</string>
    <string name="gasolinaAditivadaText">Gasolina Aditivada</string>
    <string name="visualizarText">Visualizar</string>
    <string name="clientesDizendoText">Oque os clientes estão dizendo?</string>
    <string name="voltarText">Voltar</string>

    <!--Placeholders-->
    <string name="placeholderEmail">example@example.com</string>
    <string name="reviewPlaceholderText">Digite aqui algum comentário</string>
    <string name="placeholderName">John Doe</string>
    <string name="hintSenha">Senha</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>