<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grayBG"
    tools:context="com.nf.fuelspot.ui.activity.RegisterActivity">

    <include
        android:id="@+id/include"
        layout="@layout/header_layout" />

    <include
        layout="@layout/version_layout"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <ImageView
        android:id="@+id/appIcon"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginTop="44dp"
        android:contentDescription="Ícone do aplicativo"
        android:src="@drawable/fuespotlogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/login_LoginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/cadastroText"
        android:textColor="@color/black"

        app:layout_constraintBottom_toBottomOf="@+id/login_emailText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appIcon"
        app:layout_constraintVertical_bias="0.035" />

<!-- NOME -->

    <TextView
        android:id="@+id/register_nameText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/nomeLabel"
        android:textColor="@color/black"

        android:textAllCaps="true"
        app:layout_constraintBottom_toTopOf="@+id/register_nome"
        app:layout_constraintEnd_toEndOf="@+id/register_nome"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/register_nome" />

    <EditText
        android:id="@+id/register_nome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:backgroundTint="@color/green"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/placeholderName"
        android:textColor="#A9A9A9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appIcon" />

<!--EMAIL-->
    <TextView
        android:id="@+id/register_emailText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/emailLabel"
        android:textColor="@color/black"

        android:textAllCaps="true"
        tools:layout_editor_absoluteX="101dp"
        app:layout_constraintBottom_toTopOf="@+id/register_emailLogin"
        app:layout_constraintEnd_toEndOf="@+id/register_emailLogin"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/register_emailLogin"
        />

    <EditText
        android:id="@+id/register_emailLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:backgroundTint="@color/green"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text="@string/placeholderEmail"
        android:textColor="#A9A9A9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_nome" />

    <!--SENHA-->

    <TextView
        android:id="@+id/register_senhaText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/senhaLabel"
        android:textColor="@color/black"

        android:textAllCaps="true"
        app:layout_constraintBottom_toTopOf="@+id/register_password"
        app:layout_constraintEnd_toEndOf="@+id/register_password"
        app:layout_constraintStart_toStartOf="@+id/register_password"
        />
    <EditText
        android:id="@+id/register_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/green"
        android:ems="10"
        android:inputType="textPassword"
        android:text="@string/placeholderEmail"
        android:textColor="#A9A9A9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_emailLogin" />

    <!--CONFIRMAR SENHA-->
    <TextView
        android:id="@+id/register_confirmarSenhaText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/confirmarSenhaLabel"
        android:textColor="@color/black"

        android:textAllCaps="true"
        app:layout_constraintBottom_toTopOf="@+id/register_confirmPassword"
        app:layout_constraintEnd_toEndOf="@+id/register_confirmPassword"
        app:layout_constraintStart_toStartOf="@+id/register_confirmPassword"
        />
    <EditText
        android:id="@+id/register_confirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/green"
        android:ems="10"
        android:inputType="textPassword"
        android:text="@string/placeholderEmail"

        android:textColor="#A9A9A9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_password" />

    <!--CHECKBOX SOU PROPRIETARIO-->

    <CheckBox
        android:id="@+id/checkbox_meat"
        android:layout_width="127dp"
        android:layout_height="41dp"
        android:layout_marginTop="4dp"
        android:text="@string/souProprietarioLabel"
        android:textColor="@color/black"

        android:textSize="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_confirmPassword" />

<!--Caixinha de add Posto-->
    <TextView
        android:visibility="gone"
        android:id="@+id/register_addPostoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addPostoLabel"
        android:textAllCaps="true"
        android:textColor="@color/black"

        app:layout_constraintBottom_toBottomOf="@+id/include"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_confirmPassword"
        app:layout_constraintVertical_bias="0.197" />

    <TextView
        android:visibility="gone"
        android:textColor="@color/black"

        android:id="@+id/register_addPostoButton"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/square_marked"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_addPostoText"
        app:layout_constraintVertical_bias="0.0"
    />

    <!-- CONFIRMAR BUTTON-->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="96dp"
        android:background="@drawable/button"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:text="@string/confirmarText"
        android:textAllCaps="true"

        android:textColor="#FFFFFF"
        android:textSize="29sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_meat" />

</androidx.constraintlayout.widget.ConstraintLayout>