<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.SpotReviewActivity"
    android:background="@color/grayBG"
    >

    <include
        android:id="@+id/header_layout"
        layout="@layout/header_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="0dp" />

    <include
        android:id="@+id/appVersion"
        layout="@layout/version_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_layout"
        app:layout_constraintVertical_bias="1.0"

        tools:layout_editor_absoluteX="-16dp" />

    <TextView
        android:id="@+id/gasolinaComumText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/avaliarPostoText"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/checkbox_precoErrado"
        app:layout_constraintStart_toStartOf="@+id/checkbox_precoErrado"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.941" />

    <TextView
        android:id="@+id/nomePostoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:text="@string/postoNomeLabel"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/appVersion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.144"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_layout"
        app:layout_constraintVertical_bias="0.04" />

    <CheckBox
        android:id="@+id/checkbox_precoErrado"
        android:layout_width="wrap_content"
        android:layout_height="41dp"
        android:layout_marginEnd="124dp"

        android:text="@string/precoErradoLabel"
        android:textColor="@color/black"
        android:textSize="10dp"
        app:layout_constraintBottom_toTopOf="@+id/checkbox_bemAtendido"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textbox_review" />

    <CheckBox
        android:id="@+id/checkbox_bemAtendido"
        android:layout_width="wrap_content"
        android:layout_height="41dp"
        android:layout_marginEnd="220dp"
        android:text="@string/bemAtendidoLabel"
        android:textColor="@color/black"
        android:textSize="10dp"
        app:layout_constraintBottom_toTopOf="@+id/textbox_review"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textbox_review" />

    <EditText
        android:id="@+id/textbox_review"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:background="@drawable/textbox_background"
        android:gravity="top|left"
        android:hint="@string/reviewPlaceholderText"
        android:padding="5dp"
        app:layout_constraintBottom_toTopOf="@+id/login_loginButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_layout"
        app:layout_constraintVertical_bias="0.7" />


    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/login_loginButton"
        app:layout_constraintEnd_toEndOf="@+id/login_loginButton"
        app:layout_constraintStart_toStartOf="@+id/login_loginButton"
        app:layout_constraintTop_toBottomOf="@+id/textbox_review"
        android:theme="@style/RatingBar"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        android:background="@drawable/button"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:text="@string/confirmarText"

        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="29sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/appVersion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>