<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.ReviewCommentListActivity"
    android:background="@color/grayBG">

    <include
        android:id="@+id/header_layout"
        layout="@layout/header_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="0dp" />

    <include
        android:id="@+id/appVersion"
        layout="@layout/version_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_layout"
        app:layout_constraintVertical_bias="1.0"

        tools:layout_editor_absoluteX="-16dp" />

    <TextView
        android:id="@+id/nomePostoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:text="@string/postoNomeLabel"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/appVersion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.144"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_layout"
        app:layout_constraintVertical_bias="0.04" />

    <TextView
        android:id="@+id/clientesDizendoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clientesDizendoText"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/appVersion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nomePostoText"
        app:layout_constraintVertical_bias="0.046" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clientesDizendoText"
        tools:listitem="@layout/review_comment">

    </androidx.recyclerview.widget.RecyclerView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/returnButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        android:background="@drawable/button"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:text="@string/voltarText"

        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="29sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/appVersion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>